// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders progress bar in (invalid data) error stage 1`] = `
<div>
  <div
    class="ui tiny error success progress progress-bar--custom"
    data-percent="0"
  >
    <div
      class="bar"
      style="width: 0%;"
    />
    <div
      class="label"
    >
      Invalid  progress
    </div>
  </div>
</div>
`;

exports[`renders progress bar in (no data) error stage 1`] = `
<div>
  <div
    class="ui tiny error success progress progress-bar--custom"
    data-percent="0"
  >
    <div
      class="bar"
      style="width: 0%;"
    />
    <div
      class="label"
    >
      Invalid  progress
    </div>
  </div>
</div>
`;

exports[`renders progress bar with 0/3 completed 1`] = `
<div>
  <div
    class="ui tiny error progress progress-bar--custom"
    data-percent="0"
  >
    <div
      class="bar"
      style="width: 0%;"
    />
    <div
      class="label"
    >
      0/6 fields complete
    </div>
  </div>
</div>
`;

exports[`renders progress bar with 2/3 completed 1`] = `
<div>
  <div
    class="ui tiny warning progress progress-bar--custom"
    data-percent="33"
  >
    <div
      class="bar"
      style="width: 33.33333333333333%;"
    />
    <div
      class="label"
    >
      2/6 fields complete
    </div>
  </div>
</div>
`;

exports[`renders progress bar with 3/3 completed 1`] = `
<div>
  <div
    class="ui tiny warning progress progress-bar--custom"
    data-percent="50"
  >
    <div
      class="bar"
      style="width: 50%;"
    />
    <div
      class="label"
    >
      3/6 fields complete
    </div>
  </div>
</div>
`;
